--- a/hhhhhh-base/hhhhhh-base-redis/hhhhhh-base-redis-provider/pom.xml
+++ b/hhhhhh-base/hhhhhh-base-redis/hhhhhh-base-redis-provider/pom.xml
@@ -3,28 +3,24 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hhhhhh-api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>hhhhhh-base-redis-provider</artifactId>
     <packaging>jar</packaging>
-
-    <name>hhhhhh-api</name>
-    <description>hhhhhh goodbuy api</description>
 
     <parent>
         <groupId>com.hhhhhh</groupId>
-        <artifactId>goodbuy</artifactId>
+        <artifactId>hhhhhh-base-redis</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-	<dependencies>
+    <dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
-
-    <build>
+	
+	<build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
