--- a/hhhhhh-search/hhhhhh-search-provider/pom.xml
+++ b/hhhhhh-search/hhhhhh-search-provider/pom.xml
@@ -3,26 +3,24 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hhhhhh-common</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>hhhhhh-search-provider</artifactId>
     <packaging>jar</packaging>
 
-    <name>hhhhhh-common</name>
-    <description>hhhhhh goodbuy common</description>
-
     <parent>
-        <artifactId>goodbuy</artifactId>
         <groupId>com.hhhhhh</groupId>
+        <artifactId>hhhhhh-search</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <dependencyManagement>
-        <dependencies>
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
+    <dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+	</dependencies>
+	
+	<build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
