--- a/hhhhhh-item/hhhhhh-item-servant/src/main/resources/application.yml
+++ b/hhhhhh-item/hhhhhh-item-servant/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 #DUBBOX
 dubbox:
   application: 
-    name: xbin-store-service-item
+    name: hhhhhh-item
     organization: dubbox
     owner: binux
   annotation:
