--- a/hhhhhh-item/hhhhhh-item-servant/pom.xml
+++ b/hhhhhh-item/hhhhhh-item-servant/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hhhhhh-item-service</artifactId>
+    <artifactId>hhhhhh-item-servant</artifactId>
     <packaging>jar</packaging>
 
     <parent>
@@ -25,12 +25,6 @@
         <dependency>
             <groupId>com.hhhhhh</groupId>
             <artifactId>hhhhhh-base-mapper</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-web</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
