--- a/hhhhhh-cart/hhhhhh-cart-servant/pom.xml
+++ b/hhhhhh-cart/hhhhhh-cart-servant/pom.xml
@@ -26,6 +26,11 @@
             <groupId>com.hhhhhh</groupId>
             <artifactId>hhhhhh-base-mapper</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 	
 	<build>
