--- a/hhhhhh-order/hhhhhh-order-servant/pom.xml
+++ b/hhhhhh-order/hhhhhh-order-servant/pom.xml
@@ -16,11 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>com.hhhhhh</groupId>
-            <artifactId>hhhhhh-order-client</artifactId>
+            <artifactId>hhhhhh-base-service</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hhhhhh</groupId>
-            <artifactId>hhhhhh-base-service</artifactId>
+            <artifactId>hhhhhh-order-client</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hhhhhh</groupId>
@@ -36,10 +36,10 @@
             <artifactId>activemq-all</artifactId>
         </dependency>
         <!-- freemarker -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-        </dependency>
+        </dependency>-->
 	</dependencies>
 	
 	<build>
